se realizo toda la logica para las llamadas en tiempo real usando web sockets y que sean seguras