@@ -11,8 +11,10 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
 
+/**
+ * Filtro de autenticación basado en tokens JWT.
+ */
 @Component
 public class TokenAuthFilter extends OncePerRequestFilter {
     private final AuthorizationService authorizationService;
@@ -21,6 +23,15 @@ public class TokenAuthFilter extends OncePerRequestFilter {
         this.authorizationService = authorizationService;
     }
 
+    /**
+     * Procesa cada solicitud HTTP para autenticar al usuario mediante el token JWT.
+     *
+     * @param request     La solicitud HTTP entrante.
+     * @param response    La respuesta HTTP.
+     * @param filterChain La cadena de filtros para continuar el procesamiento.
+     * @throws ServletException Si ocurre un error en el servlet.
+     * @throws IOException      Si ocurre un error de E/S.
+     */
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
@@ -28,9 +39,11 @@ public class TokenAuthFilter extends OncePerRequestFilter {
             String bearer = request.getHeader(HttpHeaders.AUTHORIZATION);
             if (bearer != null) {
                 var info = authorizationService.parseBearer(bearer);
+
                 var authorities = info.roles().stream()
                         .map(r -> new SimpleGrantedAuthority("ROLE_" + r.toUpperCase()))
-                        .collect(Collectors.toList());
+                        .toList(); 
+
                 var auth = new UsernamePasswordAuthenticationToken(info.userId(), "jwt", authorities);
                 SecurityContextHolder.getContext().setAuthentication(auth);
                 MDC.put("userId", info.userId());
